folder structure updated. maven multi module structure removed.

--- a/backend/package-service/src/main/resources/application.properties
+++ b/backend/package-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=package-service
-
+server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/real-estate-db
 spring.datasource.username=postgres
 spring.datasource.password=password
