--- a/backend/listing-service/src/main/resources/application.properties
+++ b/backend/listing-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=listing-service
-server.port=8082
+server.port=0
+eureka.instance.hostname=localhost
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/real-estate-db
 spring.datasource.username=postgres
 spring.datasource.password=password
