--- a/backend/package-service/src/main/resources/application.properties
+++ b/backend/package-service/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=package-service
-server.port=8081
+
+server.port=0
+eureka.instance.hostname=localhost
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/real-estate-db
 spring.datasource.username=postgres
 spring.datasource.password=password
