user service eureka client added.

--- a/backend/user-service/src/main/resources/application.properties
+++ b/backend/user-service/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=user-service
-server.port=8080
+server.port=0
+eureka.instance.hostname=localhost
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/real-estate-db
 spring.datasource.username=postgres
 spring.datasource.password=password
