Hibernate ddl updated.

--- a/backend/listing-service/src/main/resources/application.properties
+++ b/backend/listing-service/src/main/resources/application.properties
@@ -7,6 +7,6 @@ spring.datasource.username=postgres
 spring.datasource.password=password
 
 # create and drop table, good for testing, production set to none or comment it
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
