package service rabbitmq added.

--- a/backend/package-service/src/main/resources/application.properties
+++ b/backend/package-service/src/main/resources/application.properties
@@ -7,6 +7,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/real-estate-db
 spring.datasource.username=postgres
 spring.datasource.password=password
 
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=user
+spring.rabbitmq.password=password
+
 # create and drop table, good for testing, production set to none or comment it
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
